# Automata

./: automata.opam  dune-project
lib/: conversion.ml  dfa.ml  dune  lattice.ml  nfa.ml
